k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: eurobridge-app
  annotations:
    app.openshift.io/vcs-uri: https://github.com/thomasirmer/eurobridge-app
    app.openshift.io/vcs-ref: 0139028e9ed1c5b6292f785cb913fca9fd2c7e6e

spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: app-instance
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: app-instance
        app.kubernetes.io/name: app
    spec:
      containers:
        - name: eurobridge-app
          image: quay.io/thomasirmer/eurobridge-app
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
